v3.2.2 (2020.04.xx)
  - Update cURL library to version 7.69.1
  - Adapt to HDHomeRun RECORD engine 20200318 breaking changes
  - Omit reporting of original air date for programs of type News/Current Affairs unless a specific season/episode has been specified

v3.2.1 (2020.03.06)
  - Update cURL library to version 7.69.0
  - Update libhdhomerun library to version 20200303
  - Add "Disable backend channel logo images" option
  - Add new "Interface" settings category and move options that change how data is displayed from "General" to "Interface"

v3.2.0 (2020.02.07)
  - Update SQLite database engine to version 3.31.1
  - Update cURL library to version 7.68.0
  - Use "Filename" attribute provided by HDHomeRun RECORD instead of manually generating EDL file name(s) when available
  - Exclude episodes marked as "DeletedDontRerecord" from the list of reported timer instances
  - Exclude episodes marked as "RecordIfNotRecorded" from the list of reported timer instances when a completed recording exists
  - Prevent missing channel(s) in the Electronic Program Guide (EPG) listings from causing unncessary XMLTV reload operations
  - Fix bug preventing calculation of original air date values for programs that aired prior to 1970.01.01
  - Limit reporting of program year to programs of type MV (Movies) in Electronic Program Guide (EPG) and Recorded TV
  - Limit reporting of program original air date to programs of type EP (Series Episode) and SH (Show) in Electronic Program Guide (EPG)
  - Allow for Live TV to be streamed from any available storage engine before falling back to using a tuner device directly
  - Remove "DVR stream ring buffer size" advanced option
  - Restore "Use Original Air Date timestamp for Recorded TV programs" setting (different implementation)

v3.1.1 (2020.01.08)
  - (Windows) Use a BELOW_NORMAL thread priority for the background task scheduler
  - Remove obsolete MPEG-TS packet filtering implementation when streaming via HTTP